--- a/ass1/Makefile
+++ b/ass1/Makefile
@@ -9,10 +9,14 @@ all: run ts
 setup:
 	cabal configure
 	cabal install --dependencies-only
+
+build:
 	cabal build
 
 ts:
 	./.cabal-sandbox/bin/threadscope $(FILENAME)
 
-run:
-	./dist/build/ass1/ass1 +RTS -N$(N) -ls
+run: Main.hs
+	./dist/build/ass1/ass1 +RTS -N$(N) -ls -lf
+
+Main.hs: build
