--- a/ass1/ass1.cabal
+++ b/ass1/ass1.cabal
@@ -62,8 +62,9 @@ executable ass1
   build-depends:        base >=4.9 && <4.10,
                         random >=1.1,
                         criterion >=1.1,
-                        parallel >=3.2
-
+                        parallel >=3.2,
+                        deepseq >=1.4
+                        
   -- Directories containing source files.
   -- hs-source-dirs:
 
