--- a/ass1/ass1.cabal
+++ b/ass1/ass1.cabal
@@ -63,7 +63,8 @@ executable ass1
                         random >=1.1,
                         criterion >=1.1,
                         parallel >=3.2,
-                        deepseq >=1.4
+                        deepseq >=1.4,
+                        monad-par >= 0.3
 
   -- Directories containing source files.
   -- hs-source-dirs:
