--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,16 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### Erlang ###
+.eunit
+deps
+*.o
+*.beam
+*.plt
+erl_crash.dump
+ebin/*.beam
+rel/example_project
+.concrete/DEV_MODE
+.rebar
+
 # End of https://www.gitignore.io/api/osx,haskell
