--- a/ass1/ass1.cabal
+++ b/ass1/ass1.cabal
@@ -56,7 +56,7 @@ executable ass1
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
 
-  ghc-options: -threaded -eventlog -rtsopts -O2 -v
+  ghc-options: -threaded -eventlog -rtsopts -O2
 
   -- Other library packages from which modules are imported.
   build-depends:        base >=4.8 && <4.10,
