--- a/lab_d/stack/stack.cabal
+++ b/lab_d/stack/stack.cabal
@@ -19,12 +19,14 @@ library
                      , RepaStock
   build-depends:       base >= 4.7 && < 5
                      , repa
+                     , vector
   default-language:    Haskell2010
 
 executable stack-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -eventlog -rtsopts
+  ghc-options:         -threaded -eventlog -rtsopts -fno-full-laziness
+  -- ghc-options:         -Odph -rtsopts -threaded -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -fllvm -optlo-O3 -eventlog
   build-depends:       base
                      , stack
                      , random
